[project]
name = "strokealert"
version = "0.1.0"
description = "strokealert  prototype"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.36.1",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.22",
    "mysql-connector-python>=9.3.0",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]

