[project]
name = "strokealert_ptototype"
version = "0.2.0"
description = "strokealert  prototype"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.130.0",
    "crewai-tools>=0.0.1",
    "docling>=2.36.1",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.22",
    "mysql-connector-python>=9.3.0",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]
